<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 4.17.15 - Eduard Prokhor, Huy Ngo, Andrew Leach, Brent Young
  -->

<resources>

    <!--
    Splash Activity Resources
    -->
    <string name="signature">Buuteeq-PonyHax Designs</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!--
    MainActivity Resources
    -->
    <string name="app_name">GeoTracker</string>
    <string name="enter_email">Enter Email</string>
    <string name="password_prompt">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create New Account</string>
    <string name="forgot">Forgot Password</string>

    <!--
    RegisterActivity Resources
    -->
    <string name="title_alternate_register">Register</string>
    <string name="title_activity_register">User Registration</string>
    <string name="password">Password: </string>
    <string name="password_prompt_reenter">Re-enter Password</string>
    <string name="email">Email Address: </string>
    <string name="security_answer">Question Answer</string>
    <string name="security_answer_reenter">Re-enter Question Answer</string>

    <!--
    ForgotActivity Resources
    -->
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="auto_fill_security_question">Security Question will appear after you type your email!</string>
    <string name="email_prompt">New Email Address</string>
    <string name="enter_password">Enter Password</string>

    <!--
     SettingFragment Resources
     -->
    <string name="geo_tracker">GeoTracker</string>
    <string name="action_settings">My Settings</string>
    <string name="title_activity_createNew">Create New Password</string>
    <string name="security_question">To Change Security Question Tap Below! </string>
    <string name="enter_security_answer">Enter Your Security Answer</string>


    <!--
    Navigation Drawer Resources
    -->
    <string name="startButtonText">Start Tracking</string>
    <string name="stopButtonText">Stop Tracking</string>
    <string name="gps_enabled">GPS Services Enabled</string>
    <string name="gps_disabled">GPS Services Disabled</string>

    <string name="title_section1">My Map</string>
    <string name="title_section2">Overview</string>
    <string name="title_section3">Preferences</string>
    <string name="title_section4">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_agreement">AgreementActivity</string>

    <string name="nameField">Full Name</string>
    <string name="userNamePrompt">User Name</string>
    <string name="confirmButton">Confirm</string>
    <string name="title_activity_my_account">Overview</string>
    <string name="reset_password">Password Reset</string>

    <string name="title_activity_my_map">Map</string>
    <string name="title_activity_create_new_password">CreateNewPasswordActivity</string>

    <string name="num_data_points">Data Points Collected: </string>
    <string name="change_security_question">Reset Security Question</string>


    <!--
    Agreement Activity Resources
    -->
    <string name="agreement_statement">GeoTracker will require access to: \n\nInternet and Web Services\nNetwork State\nExternal Storage\nAccessing and Reading GPS services\nAccess to Location information</string>
    <string name="disagreeButtonText">I Disagree</string>
    <string name="agree">Agree to Terms</string>


    <!--
    Misc. Resources
    -->
    <string name="user_not_found">User not found</string>

    <!--
    Overview Fragment resources
    -->

    <string name="recent_location_string">Locations Gathered</string>
    <string name="latitude_string">Latitude:  </string>
    <string name="longitude_string">Longitude:  </string>
    <string name="bearing_string">Bearing:  </string>
    <string name="time_stamp_string">Time:  </string>
    <string name="speed_string">Speed:  </string>
    <string name="total_distance_string">Total Distance: </string>
    <string name="total_distance_range_string">Interval Distance: </string>
    <string name="general_stats_string">General Statistics: </string>
    <string name="display_list_points">Show List of Points</string>
    <string name="list_title">Coordinate List:</string>


    <!--
    List of questions for Spinner (Drop-down box) in the
    Register Activity.
    -->
    <string-array name="question_options">
        question-arrays
        <item name="default position">Please choose a security question &#9660; </item>
        <item name="gf_middle_name">What is your grandfather\'s middle name?</item>
        <item name="fav_color">What is your favorite color?</item>
        <item name="anniversary">What day is your anniversary?</item>
        <item name="where_born">In what city were you born?</item>
        <item name="fav_activity">What is your favorite activity?</item>
        <item name="mother_maiden">What is your mother\'s maiden name?</item>
        <item name="fav_sports_team">What is your favorite sports team?</item>
        <item name="first_job">What was your first job?</item>
    </string-array>

    <!--
    Range Picker fragment Values
    -->
    <string name="showAllText">Show All Coordinates</string>
    <string name="foregroundChoiceText">Enable Background Updates</string>
    <string name="push_points_prompt1">Upload</string>
    <string name="push_points_prompt2">Locally Stored Points</string>
    <string name="general_options_string">General Options: </string>
    <string name="title_preferences">Preferences</string>
    <string name="startDateText">Modify Start Time</string>
    <string name="selectDateRange">Select Date Range:</string>
    <string name="endDateText">Modify End Time</string>
    <string name="startOfRange">From:</string>
    <string name="endOfRange">  To:</string>
    <string name="confirmRange">@android:string/ok</string>
    <string name="cancelRange">@android:string/cancel</string>
    <string name="queryDateRange">Query Date Range</string>
    <string name="storeChosenTimes">SAVE</string>
    <string name="cancelChosenTimes">@android:string/cancel</string>
    <string name="gps_sampling_text">GPS Sampling Frequency: </string>
    <string name="every_x_minutes">Every x minutes</string>


</resources>
