<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_dark"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uw.buuteeq_ponyhax.app.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/material_deep_teal_500" />

        <EditText
            android:id="@+id/userNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/userNamePrompt"
            android:textColor="@color/material_deep_teal_500" />

        <EditText
            android:id="@+id/passwordEditInitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password_prompt"
            android:inputType="textPassword"
            android:textColor="@color/material_deep_teal_500" />

        <EditText
            android:id="@+id/passwordEditSubsequent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password_prompt_reenter"
            android:inputType="textPassword"
            android:textColor="@color/material_deep_teal_500" />

        <EditText
            android:id="@+id/securityQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/security_question"
            android:textColor="@color/material_deep_teal_500" />

        <EditText
            android:id="@+id/securityQuestionAnswerInitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/security_answer"
            android:textColor="@color/material_deep_teal_500" />

        <EditText
            android:id="@+id/securityQuestionAnswerSubsequent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/security_answer_reenter"
            android:textColor="@color/material_deep_teal_500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirmNewUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>
