<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/AppTheme"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/earth_icon"
            android:background="@null"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="@string/app_name"
            android:textSize="@dimen/abc_text_size_display_2_material"
            android:textColor="@color/material_deep_teal_500"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_field"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            style="@style/editTextTheme"
            android:textAppearance="@style/TextAppearance.AppCompat" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            style="@style/editTextTheme"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/buttonTheme"
            android:text="@string/login" />

        <Button
            android:id="@+id/new_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/buttonTheme"
            android:text="@string/create_account" />

    </LinearLayout>

    <Button
        android:id="@+id/forgot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        style="@style/buttonTheme"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
