<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/AppTheme">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="uw.buuteeq_ponyhax.app.MyAccount$PlaceholderFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/title_activity_my_account"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/editTextTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card_layout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/userNamePrompt"
                style="@style/editTextTheme"
                android:layout_marginTop="10dp"
                android:id="@+id/text_account_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/email"
                style="@style/editTextTheme"
                android:layout_marginTop="10dp"
                android:id="@+id/text_account_email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/num_data_points"
                style="@style/editTextTheme"
                android:layout_marginTop="10dp"
                android:id="@+id/text_account_numDataPoints" />


            <!-- <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/AppTheme"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@mipmap/emma_watson"
                    android:scaleType="centerCrop" />



            </LinearLayout> -->

        </LinearLayout>


    </LinearLayout>


</ScrollView>



